# simpleConfig

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: API.md  VALIDATION_SCHEMA.md
lib/: CMakeLists.txt  config_parser.hpp  error_reporter.hpp  int_range.hpp  parser_base.hpp  parser_utils.hpp  range.hpp  schema_node.hpp  schema_parser.hpp  setting.cpp  setting.hpp  simpleConfig.cpp  simpleConfig.hpp  simple_config.cpp  simple_config.hpp  validator.cpp  validator.hpp  value_type.cpp  value_type.hpp
tests/: CMakeLists.txt  t01-settings.cpp  t02-parse.cpp  t03-parse-schema.cpp  t04-validate-with-schema.cpp  t05-streaming.cpp
